--- a/public/soft-ui-dashboard-main/pages/profile.html
+++ b/public/soft-ui-dashboard-main/pages/profile.html
@@ -482,6 +482,26 @@
             </div>
           </div>
         </div>
+        <!-- <div class="col-12 col-xl-4">
+          <div class="card h-100">
+            <div class="card-header p-3">
+              <div class="row">
+                <div class="col-md-8 d-flex align-items-center">
+                  <h6 class="">Profile Information</h6>
+                </div>
+                <p class="text-sm">
+                  Hi, I’m Alec Thompson, Decisions: If you can’t decide, the answer is no. If two equally difficult paths, choose the one more painful in the short term (pain avoidance is creating an illusion of equality).
+                </p>
+                <div class="col-md-8 d-flex align-items-center">
+                  <h6 class="">Profile Information</h6>
+                </div>
+                <p class="text-sm">
+                  Hi, I’m Alec Thompson, Decisions: If you can’t decide, the answer is no. If two equally difficult paths, choose the one more painful in the short term (pain avoidance is creating an illusion of equality).
+                </p>
+              </div>
+            </div>
+          </div>
+        </div> -->
         <div class="col-12 col-xl-4">
           <div class="card h-100">
             <div class="card-header pb-0 p-3">
